saving while in multires makes blender crash #61836

Closed
opened 2019-02-22 06:21:11 +01:00 by Massimiliano Puliero · 5 comments

System Information
Operating system: win 7 64
Graphics card: gtx 1070

Blender Version
Broken: 2.80.0-git.4d4ae491c809-windows64
Worked: 2.80.0-git.855b3e68ef27-windows64

Short description of error
if you are in sculpt mode, Blender crash after saving and won't open the file again.
The file saved can actually be open in previuos 2.8 versions

Exact steps for others to reproduce the error
save in while in sculpt mode.

Here you find the file I can't open anymore in git.855b3e68ef27 (I can open it in git.4d4ae491c809)

multires_open.blend

**System Information** Operating system: win 7 64 Graphics card: gtx 1070 **Blender Version** Broken: 2.80.0-git.4d4ae491c809-windows64 Worked: 2.80.0-git.855b3e68ef27-windows64 **Short description of error** if you are in sculpt mode, Blender crash after saving and won't open the file again. The file saved can actually be open in previuos 2.8 versions **Exact steps for others to reproduce the error** save in while in sculpt mode. Here you find the file I can't open anymore in git.855b3e68ef27 (I can open it in git.4d4ae491c809) [multires_open.blend](https://archive.blender.org/developer/F6684188/multires_open.blend)

Added subscriber: @MassimilianoPuliero

Added subscriber: @MassimilianoPuliero
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Sergey Sharybin was assigned by Jacques Lucke 2019-02-22 11:51:25 +01:00
Member

I can reproduce the crash with these steps:

  1. Open default scene.
  2. Go to sculpt mode on cube.
  3. Add a multires modifier.
  4. Click on Subdivide.
  5. Save.
I can reproduce the crash with these steps: 1. Open default scene. 2. Go to sculpt mode on cube. 3. Add a multires modifier. 4. Click on Subdivide. 5. Save.

This issue was referenced by 947d78b00b

This issue was referenced by 947d78b00bd9bbc9992504c69f060f04c2e151de

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61836
No description provided.