Multires: Fix ownership problem causing crashes

Fixes crash when leaving multires mode.

Fixes T61836: Saving while in multires makes blender crash